# hermes

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  compose.yml  ruff.toml  rust-toolchain.toml  rustfmt.toml
hermes-core/: .gitignore  Cargo.toml
hermes-core-python/: Cargo.toml  pyproject.toml
hermes-core-python/src/: lib.rs
hermes-core/benches/: bmp_payload_layout.rs  bmp_reorder.rs  bmp_vs_maxscore.rs  compression.rs  core_structures.rs  generate_benchmark_data.py  generate_embeddings.py  indexing.rs  large_benchmark.rs  posting_compression.rs  test_triton.py  vector_indexing.rs
hermes-core/benches/hermes_benchmark/: config.rs  data.rs  main.rs  metrics.rs  mod.rs  output.rs
hermes-core/benches/posting_compression/: access_patterns.rs  block_decompression.rs  common.rs  deserialization.rs  distribution.rs  encoding.rs  iteration.rs  main.rs  mod.rs  seek.rs  summary.rs
hermes-core/src/: error.rs  index.rs  lib.rs  observe.rs  wand.rs
hermes-core/src/compression/: mod.rs  zstd.rs
hermes-core/src/directories/: cold_io.rs  directory.rs  http.rs  mmap.rs  mod.rs  slice_cache.rs
hermes-core/src/dsl/: mod.rs  query_field_router.rs  schema.rs
hermes-core/src/dsl/ql/: mod.rs  ql.pest
hermes-core/src/dsl/sdl/: mod.rs  sdl.pest
hermes-core/src/index/: helpers.rs  metadata.rs  mod.rs  primary_key.rs  reader.rs  searcher.rs  vector_builder.rs  wasm_writer.rs  writer.rs
hermes-core/src/index/tests/: basic.rs  bmp.rs  boolean.rs  filter.rs  merge.rs  mod.rs  pin.rs  primary_key.rs  range.rs  search.rs  tq_bench.rs  vector.rs
hermes-core/src/merge/: consts.rs  mod.rs  scheduler.rs  segment_manager.rs
hermes-core/src/query/: bm25.rs  bmp.rs  boolean.rs  boost.rs  collector.rs  docset.rs  fast_filter.rs  fusion.rs  global_stats.rs  mod.rs  phrase.rs  planner.rs  prefix.rs  range.rs  reranker.rs  scoring.rs  scoring_tests.rs  term.rs  traits.rs  vector.rs  wand.rs  wand_or.rs
hermes-core/src/query/vector/: binary_dense.rs  combiner.rs  dense.rs  mod.rs  sparse.rs
hermes-core/src/segment/: ann_build.rs  ann_disk.rs  bmp_grid.rs  builder.rs  format.rs  merger.rs  mod.rs  pin.rs  reader.rs  reorder.rs  sparse_format.rs  store.rs  tracker.rs  types.rs  vector_data.rs
hermes-core/src/segment/builder/: bmp.rs  config.rs  dense.rs  mod.rs  (+12 more)
hermes-core/src/structures/: bitpacking.rs  elias_fano.rs  fast_field.rs  horizontal_bp128.rs  ivf_rabitq.rs  mod.rs  opt_p4d.rs  partitioned_ef.rs  posting.rs  posting_common.rs  posting_format.rs  rabitq.rs  roaring.rs  rounded_bp128.rs  simd.rs  simd_bp128.rs  sparse_vector.rs  sstable.rs  sstable_index.rs  vertical_bp128.rs
hermes-core/src/tokenizer/: hf_tokenizer.rs  idf_weights.rs  mod.rs
hermes-core/tests/: index_writer_regressions.rs  primary_key_builder_forces_fast.rs  segment_meta_durability.rs  wasm_builder_store_memory_regression.rs  wasm_writer_regressions.rs
hermes-llm/: .gitignore  Cargo.toml  README.md
hermes-llm/benches/: moe_layer.rs  moe_layer_pytorch.py  moe_primitives.rs
hermes-llm/checkpoints/: config.json
hermes-llm/scripts/: merge_checkpoints.py  train_nccl.sh
hermes-llm/src/: config.rs  cubecl_kernels.rs  data.rs  distributed.rs  dpo.rs  generate.rs  io.rs  lab.rs  lib.rs  main.rs  metal_scan.rs  model.rs  remote.rs  selective_scan.metal  tokenizer.rs  trace.rs  training.rs
hermes-llm/src/burn_model/: attention.rs  backend.rs  block.rs  conv.rs  cube_tensor.rs  ffn.rs  mamba.rs  mod.rs  scan.rs  transformer.rs  weights.rs
hermes-llm/src/mal/: mal.pest  mod.rs
hermes-llm/src/model/: attention.rs  backend.rs  block.rs  conv.rs  cube_attention.rs  cube_tensor.rs  ffn.rs  fused_attention.rs  fused_swiglu.rs  fusion.rs  grouped_linear.rs  linear_cross_entropy.rs  mamba.rs  matmul.rs  mod.rs  moe_dispatch.rs  moe_route.rs  moe_topk.rs  norm.rs  rope.rs  row_permute.rs  scan.rs  transformer.rs  weights.rs
hermes-llm/well-known/: gpt2_large.mal  gpt2_medium.mal  llama_7b.mal  retriever_100m.mal  tiny.mal
hermes-mal/: Cargo.toml
hermes-mal-py/: Cargo.toml  README.md  pyproject.toml
hermes-mal-py/src/: lib.rs
hermes-mal/src/: lib.rs  mal.pest
hermes-mal/well-known/: hybrid_tiny.mal  mistral_7b.mal  retriever_100m.mal  retriever_200m_moe.mal
hermes-python/: Cargo.toml  pyproject.toml
hermes-python/src/: lib.rs
hermes-server/: Cargo.toml  Dockerfile  README.md  build.rs
hermes-server/k8s/: deployment.yaml  documents.sdl  kustomization.yaml  namespace.yaml  pvc.yaml  service.yaml
hermes-server/proto/: hermes.proto
hermes-server/src/: converters.rs  error.rs  index_service.rs  main.rs  optimizer.rs  registry.rs  search_service.rs
hermes-tokenizer/: Cargo.toml  README.md  UPSTREAM.md
hermes-tokenizer/src/: hf.rs  lib.rs
hermes-tokenizer/src/bpe/: mod.rs  pretoken_cache.rs  tiktoken.rs
hermes-tokenizer/src/pretokenize/: mod.rs  options.rs  unicode.rs
hermes-tokenizer/tests/: parity.rs
hermes-tool/: Cargo.toml
hermes-tool/src/: data_processing.rs  index_ops.rs  main.rs  vector_ops.rs
hermes-train/: Cargo.toml  README.md  curriculum.example.json  education-curriculum.example.json  pyproject.toml
hermes-train/scripts/: build_education_curriculum.py  education_curriculum.py  relaunch.conf.example  relaunch.sh  relaunch_test.sh  test_education_curriculum.py  test_wandb_tail.py  wandb_tail.py
hermes-train/src/: checkpoint.rs  curriculum.rs  data.rs  main.rs  muon.rs  trainer.rs
hermes-train/src/data/: batch.rs  structured.rs
hermes-train/src/hermes_train/: __init__.py  cli.py  config.py  data.py  dpo.py  mal.py  model.py  muon.py  textio.py  tokenizer.py  train.py
hermes-train/tests/: test_mal.py  test_model.py
hermes-wasm/: Cargo.toml  README.md  build.sh  package-lock.json  package.json  tsconfig.json  vitest.mjs
hermes-wasm/examples/: .gitignore  encrypted.html  index.html
hermes-wasm/patches/: fetch.patch
hermes-wasm/src/: idb.rs  ipfs_index.rs  lib.rs  local_index.rs  query.rs  registry.rs  remote_index.rs
hermes-wasm/tests/: base.test.ts  persistence.test.js  persistence.test.ts  storage.ts
(+191 files in other folders)
