[workspace]
members = [
    "hermes-core",
    "hermes-llm",
    "hermes-mal",
    "hermes-mal-py",
    "hermes-train",
    "hermes-server",
    "hermes-tool",
    "hermes-wasm",
]
resolver = "2"

[workspace.package]
version = "1.8.64"
edition = "2024"
rust-version = "1.97"
license = "MIT"
repository = "https://github.com/SpaceFrontiers/hermes"
homepage = "https://github.com/SpaceFrontiers/hermes"
documentation = "https://docs.rs/hermes-core"
authors = ["izihawa"]
keywords = ["search", "full-text-search", "indexing", "ir"]
categories = ["database", "text-processing"]

# Python bindings

[workspace.dependencies]
# Internal crates
hermes-core = { version = "1.8.64", path = "hermes-core", default-features = false }
hermes-mal = { version = "1.8.57", path = "hermes-mal" }
hermes-llm = { version = "1.8.57", path = "hermes-llm", default-features = false }

# Async runtime
tokio = { version = "1.49", features = ["rt-multi-thread", "sync", "fs", "io-util", "macros"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sonic-rs = "0.5"
byteorder = "1.5"
bincode = "2.0"
prost = "0.14"
prost-types = "0.14"

# Compression
zstd = { version = "0.13", default-features = false, features = ["zdict_builder"] }
rust-openzl = "0.1"

# Text processing
rust-stemmers = "1.2"
stop-words = "0.10"

# Collections and utilities
rustc-hash = "2.1"
parking_lot = "0.12"
async-channel = "2.3"
num_cpus = "1.17"
rayon = "1.11"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Parsing
pest = "2.8"
pest_derive = "2.8"
regex = "1.12"

# Encoding
base64 = "0.22"

# gRPC
tonic = "0.14"
tonic-build = "0.14"

# CLI
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Python bindings
pyo3 = { version = "0.29", features = ["extension-module"] }

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Response", "Headers", "Request", "RequestInit", "RequestMode"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }

# Testing
tempfile = "3.24"
rand = "0.9"

# Benchmarking
criterion = { version = "0.8", features = ["html_reports"] }

# High-performance data structures
lasso = { version = "0.7", features = ["multi-threaded"] }
hashbrown = "0.17"
memmap2 = "0.9"
uuid = { version = "1.19", features = ["v4"] }

# Keep Burn's CubeK dependency on the same strided-attention fix used directly
# by hermes-llm.
[patch."https://github.com/tracel-ai/cubek"]
cubek = { git = "https://github.com/ppodolsky/cubek", rev = "058827ffef7231d48901983cbc1121f897ced752" }

# Burn main still points at upstream CubeCL. Use our fork (allocation-retry
# fix + asynchronous cuBLAS BF16 GEMM server dispatch) for Burn's direct
# CubeCL dependencies as well as hermes-llm's.
[patch."https://github.com/tracel-ai/cubecl"]
cubecl = { git = "https://github.com/ppodolsky/cubecl", rev = "bda6a68d86df41f468cac78d713f1563869daa8e" }
cubecl-common = { git = "https://github.com/ppodolsky/cubecl", rev = "bda6a68d86df41f468cac78d713f1563869daa8e" }
cubecl-zspace = { git = "https://github.com/ppodolsky/cubecl", rev = "bda6a68d86df41f468cac78d713f1563869daa8e" }

# Route every Burn crate to the pinned fork: upstream `bd6e8fa2f` plus the
# BF16 native-GEMM matmul dispatch (autotune-arbitrated against fused CubeK)
# and the upstream `f31e7513a` foreign-stream drop-ordering backport.
# Measured on A100: +15.6%/+14.8% training tokens/s at batch 16/20 with
# identical losses (docs/cublas-gemm-dispatch.md).
[patch."https://github.com/tracel-ai/burn"]
burn-core = { git = "https://github.com/ppodolsky/burn", rev = "e2fe66511a2d287974d127d50844c80ee18befc0" }
burn-autodiff = { git = "https://github.com/ppodolsky/burn", rev = "e2fe66511a2d287974d127d50844c80ee18befc0" }
burn-nn = { git = "https://github.com/ppodolsky/burn", rev = "e2fe66511a2d287974d127d50844c80ee18befc0" }
burn-ndarray = { git = "https://github.com/ppodolsky/burn", rev = "e2fe66511a2d287974d127d50844c80ee18befc0" }
burn-wgpu = { git = "https://github.com/ppodolsky/burn", rev = "e2fe66511a2d287974d127d50844c80ee18befc0" }
burn-cuda = { git = "https://github.com/ppodolsky/burn", rev = "e2fe66511a2d287974d127d50844c80ee18befc0" }
burn-store = { git = "https://github.com/ppodolsky/burn", rev = "e2fe66511a2d287974d127d50844c80ee18befc0" }
burn-cubecl = { git = "https://github.com/ppodolsky/burn", rev = "e2fe66511a2d287974d127d50844c80ee18befc0" }
burn-fusion = { git = "https://github.com/ppodolsky/burn", rev = "e2fe66511a2d287974d127d50844c80ee18befc0" }
burn-ir = { git = "https://github.com/ppodolsky/burn", rev = "e2fe66511a2d287974d127d50844c80ee18befc0" }
burn-optim = { git = "https://github.com/ppodolsky/burn", rev = "e2fe66511a2d287974d127d50844c80ee18befc0" }
burn-pack = { git = "https://github.com/ppodolsky/burn", rev = "e2fe66511a2d287974d127d50844c80ee18befc0" }
