[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "hermes-core-python"
version = "0.4.1"
description = "Python bindings for Hermes search engine"
readme = "../README.md"
license = { text = "MIT" }
authors = [{ name = "izihawa" }]
keywords = ["search", "full-text-search", "indexing", "ir"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Text Processing :: Indexing",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/SpaceFrontiers/hermes"
Repository = "https://github.com/SpaceFrontiers/hermes"
Documentation = "https://github.com/SpaceFrontiers/hermes"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "hermes_core"

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]
