[package]
name = "hermes-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Burn-based LLM inference and model definition; training lives in hermes-train"
keywords = ["llm", "transformer", "deep-learning", "gpt", "inference"]
categories = ["science"]

[dependencies]
# Burn is the sole inference runtime. CPU uses ndarray; GPU backends and the
# custom selective-scan op use Burn's CubeCL tensor/runtime directly.
burn = { package = "burn-core", version = "0.21", default-features = false, features = ["std"] }
burn-autodiff = { version = "0.21", default-features = false, features = ["std"] }
burn-nn = { version = "0.21", default-features = false, features = ["std"] }
burn-ndarray = { version = "0.21", default-features = false, features = ["std"] }
burn-wgpu = { version = "0.21", optional = true, default-features = false, features = ["std", "metal", "autotune"] }
burn-cuda = { version = "0.21", optional = true, default-features = false, features = ["std", "autotune"] }
burn-store = { version = "0.21", default-features = false, features = [
    "safetensors",
    "std",
] }
burn-cubecl = { version = "0.21", optional = true, default-features = false, features = ["std"] }
cubecl = { version = "=0.10.0", optional = true, default-features = false, features = ["std"] }

# Tokenization (fancy-regex instead of onig to avoid objc2 on Linux)
tokenizers = { version = "0.23", default-features = false, features = ["progressbar", "fancy-regex"] }

# Serialization
serde_json = { workspace = true }

# Model Architecture Language (MAL) parser — single source of truth
hermes-mal = { workspace = true }

# CLI and logging
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Utilities
rand = { workspace = true }

# Remote artifact loading (s3://, gs://, http(s)://). The pinned upstream
# 0.14.1 revision includes the quick-xml security update not in crates.io 0.14.0.
# `version` is the crates.io fallback Cargo uses when packaging this crate.
object_store = { version = "0.14", git = "https://github.com/apache/arrow-rs-object-store.git", rev = "c7316d29face118e7409eead0cda098f38589428", default-features = false, features = ["aws", "gcp", "http"], optional = true }
tokio = { version = "1", default-features = false, features = ["rt"], optional = true }
url = { version = "2", optional = true }
dirs = { version = "6", optional = true }

[features]
default = ["remote"]
# Load weights/config/tokenizer from s3://, gs://, http(s):// (downloads + caches)
remote = ["dep:object_store", "dep:tokio", "dep:url", "dep:dirs"]
metal = ["dep:burn-wgpu", "dep:burn-cubecl", "dep:cubecl"]
cuda = ["dep:burn-cuda", "dep:burn-cubecl", "dep:cubecl"]

[[bin]]
name = "hermes-llm"
path = "src/main.rs"

[package.metadata.cargo-machete]
# `#[cube]` macro expansion requires the direct crate even though static source
# analysis only sees it behind the GPU feature gates.
ignored = ["cubecl"]
