[package]
name = "hermes-mal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Model Architecture Language (MAL) parser — the single source of truth for Hermes model definitions"
keywords = ["llm", "dsl", "parser", "transformer", "pest"]
categories = ["parser-implementations", "science"]

[dependencies]
# Parser for Model Architecture Language (MAL)
pest = { workspace = true }
pest_derive = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Embed well-known model files
rust-embed = { version = "8", features = ["include-exclude"] }
