[package]
name = "hermes-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Python bindings for Hermes search engine"

[lib]
name = "hermes_python"
crate-type = ["cdylib", "rlib"]

[dependencies]
hermes-core = { workspace = true, features = ["native"] }
pyo3 = { workspace = true, features = ["auto-initialize"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
pyo3-build-config = "0.27"
