[package]
name = "hermes-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "gRPC search server for Hermes"

[[bin]]
name = "hermes-server"
path = "src/main.rs"

[[bin]]
name = "serve-index"
path = "src/bin/serve_index.rs"

[[bin]]
name = "test-doc-retrieval"
path = "src/bin/test_doc_retrieval.rs"

[dependencies]
hermes-core = { workspace = true, features = ["native"] }
tokio = { workspace = true, features = ["macros", "signal"] }
tonic = { workspace = true }
tonic-prost = "0.14"
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
parking_lot = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
tonic-prost-build = "0.14"
