[package]
name = "hermes-tool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI tools for Hermes - index management, simhash, sorting, and data processing"

[[bin]]
name = "hermes-tool"
path = "src/main.rs"

[dependencies]
hermes-core = { workspace = true, features = ["native"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-std"] }
serde = { workspace = true }
serde_json = { workspace = true }
sonic-rs = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
murmur3 = "0.5"
chrono = "0.4"
rayon = "1.11"
crossbeam-channel = "0.5"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["stats", "background_threads"] }
tikv-jemalloc-ctl = "0.6"
