[package]
name = "hermes-train"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Burn-native training for MAL-defined Hermes language models"

[dependencies]
anyhow.workspace = true
burn = { package = "burn-core", version = "0.21", default-features = false, features = ["std"] }
burn-autodiff = { version = "0.21", default-features = false, features = ["std"] }
burn-optim = { version = "0.21", default-features = false, features = ["std"] }
clap.workspace = true
hermes-llm.workspace = true
hashbrown = "0.16"
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing-subscriber.workspace = true
zstd.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
default = []
metal = ["hermes-llm/metal"]
cuda = ["hermes-llm/cuda"]

[[bin]]
name = "hermes-train"
path = "src/main.rs"
