[package]
name = "hermes-train"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Training for MAL-defined Hermes language models"
publish = false

[dependencies]
anyhow.workspace = true
burn = { package = "burn-core", git = "https://github.com/tracel-ai/burn.git", rev = "bd6e8fa2f23c2ecea1044af149bdc9e698a0848d", default-features = false, features = ["std", "extension", "ndarray", "autodiff"] }
burn-nn = { git = "https://github.com/tracel-ai/burn.git", rev = "bd6e8fa2f23c2ecea1044af149bdc9e698a0848d", default-features = false, features = ["std"] }
burn-optim = { git = "https://github.com/tracel-ai/burn.git", rev = "bd6e8fa2f23c2ecea1044af149bdc9e698a0848d", default-features = false, features = ["std"] }
burn-pack = { git = "https://github.com/tracel-ai/burn.git", rev = "bd6e8fa2f23c2ecea1044af149bdc9e698a0848d", default-features = false, features = ["std"] }
clap.workspace = true
hermes-llm.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing-subscriber.workspace = true
zstd.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
default = []
metal = ["hermes-llm/metal"]
cuda = ["hermes-llm/training-fusion"]

[[bin]]
name = "hermes-train"
path = "src/main.rs"
