[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-train"
version = "1.8.56"
description = "PyTorch training for Hermes LLMs (MAL-defined models, safetensors checkpoints served by hermes-llm)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "izihawa" }
]
keywords = ["llm", "transformer", "training", "pytorch", "muon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.6",
    "safetensors>=0.4",
    "tokenizers>=0.20",
    "numpy>=1.26",
    "zstandard>=0.22",
    "tqdm>=4.66",
]

[project.optional-dependencies]
# Fused Mamba-2 selective-scan kernels (CUDA only)
mamba = ["mamba-ssm>=2.2"]
# Live training-curve dashboard (enabled at runtime via WANDB_API_KEY)
wandb = ["wandb>=0.18"]

[project.scripts]
hermes-train = "hermes_train.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

# CPU-only torch wheels on Linux (CI, most dev boxes without CUDA setup).
# GPU training boxes install torch with CUDA explicitly; macOS wheels already
# ship CPU+MPS from PyPI.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_train"]

[tool.pytest.ini_options]
testpaths = ["tests"]
